# cs312-final-project

./: .gitignore  CMakeLists.txt  Proposal.md  README.md
src/: main.cpp  marioparticlesystem.cpp  marioparticlesystem.h  particle.h  particlesystem.cpp  particlesystem.h  renderer.cpp  renderer.h
src/util/: AGLM.h  image.cpp  image.h
